@@ -129,6 +129,9 @@ mp6 [switches] [programfile]
         if $backend eq 'js' {
             $prelude_filename := $perl6lib ~ '/MiniPerl6/Javascript/Prelude.pm';
         }
+        if $backend eq 'go' {
+            $prelude_filename := $perl6lib ~ '/MiniPerl6/Go/Prelude.pm';
+        }
         if $prelude_filename {
             if $verbose {
                 warn "// loading lib: ", $prelude_filename;
@@ -163,6 +166,12 @@ mp6 [switches] [programfile]
         }
         if $backend eq 'go' {
             say "// Do not edit this file - Generated by ", $_V6_COMPILER_NAME, " ", $_V6_COMPILER_VERSION;
+            my $filename := $perl6lib ~ '/MiniPerl6/Go/Runtime.go';
+            if ( $verbose ) {
+                warn "// now loading: ", $filename;
+            }
+            my $source := IO::slurp( $filename );
+            say $source;
             say CompUnit::emit_go_program( $comp_units );
         }
         if $backend eq 'lisp' {
